--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "predeploy": "ng build --prod",
+    "deploy": "gh-pages -d dist/ngx-rbac-demo"
   },
   "private": true,
   "dependencies": {
@@ -27,12 +29,12 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular-devkit/build-ng-packagr": "~0.12.0",
-    "@angular/cli": "~7.2.1",
+    "@angular/cli": "^7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -46,7 +48,7 @@
     "ts-node": "~7.0.0",
     "tsickle": ">=0.34.0",
     "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
+    "tslint": "^5.16.0",
     "typescript": "~3.2.2"
   }
 }
